--- a/config/logging_config.yaml
+++ b/config/logging_config.yaml
@@ -3,7 +3,7 @@ disable_existing_loggers: false
 
 formatters:
   standard:
-    format: '%(asctime)s - %(name)s - %(levelname)s - %(message)s'
+    format: "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
   error:
     format: '%(asctime)s - %(name)s - %(levelname)s - %(message)s - %(filename)s:%(lineno)d'
 
@@ -15,13 +15,10 @@ handlers:
     stream: ext://sys.stdout
 
   file:
-    class: logging.handlers.RotatingFileHandler
-    level: DEBUG
+    class: logging.FileHandler
+    level: INFO
     formatter: standard
     filename: logs/app.log
-    maxBytes: 10485760  # 10MB
-    backupCount: 5
-    encoding: utf8
 
   error_file:
     class: logging.handlers.RotatingFileHandler
@@ -34,10 +31,10 @@ handlers:
 
 loggers:
   legal_doc_intelligence:
-    level: DEBUG
-    handlers: [console, file, error_file]
-    propagate: false
+    level: INFO
+    handlers: [console, file]
+    propagate: no
 
 root:
   level: INFO
-  handlers: [console] 
+  handlers: [console, file] 
