--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,36 +16,37 @@ classifiers = [
 [tool.poetry]
 name = "legal-doc-intelligence"
 version = "0.1.0"
-description = "Legal Document Intelligence Platform - A data pipeline for processing Taiwan legal documents"
+description = "法律文件智能處理平台，支援爬蟲、資料清洗、資料庫、向量化、RAG 問答與 API。"
 authors = ["Your Name <your.email@example.com>"]
+license = "MIT"
 readme = "README.md"
 packages = [{include = "legal_doc_intelligence", from = "src"}]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.12"
 scrapy = "^2.11.0"
-pandas = "^2.2.0"
-sqlalchemy = "^2.0.27"
+pandas = "^2.2.2"
+sqlalchemy = "^2.0.30"
 psycopg2-binary = "^2.9.9"
 pydantic = "^2.6.1"
 jieba = "^0.42.1"
 python-dotenv = "^1.0.1"
 loguru = "^0.7.2"
-chromadb = "^0.4.22"
-sentence-transformers = "^2.3.1"
-fastapi = "^0.109.2"
-uvicorn = "^0.27.1"
+chromadb = "^0.4.24"
+sentence-transformers = "^2.7.0"
+fastapi = "^0.111.0"
+uvicorn = {extras = ["standard"], version = "^0.29.0"}
 langchain = "^0.1.9"
 openai = "^1.12.0"
 httpx = "^0.26.0"
 numpy = "^1.26.0"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^8.0.0"
+pytest = "^8.2.0"
 pytest-cov = "^4.1.0"
 pytest-asyncio = "^0.23.0"
 pytest-mock = "^3.12.0"
-ruff = "^0.2.1"
+ruff = "^0.4.4"
 mypy = "^1.8.0"
 black = "^24.1.0"
 isort = "^5.13.0"
